<resources>
    <string name="app_name">能购商家端</string>
    <!--recyclerView Layout-->
    <string name="layoutManager_Gridlayout">GridLayoutManager</string>
    <string name="layoutManager_LinearLayout">LinearLayoutManager</string>


    <string name="cancel">取消</string>
    <string name="action_confirm">确定</string>

    <!--刷新-->
    <string name="bottom_pull_refresh_content">刷新并查看服务项目</string>
    <string name="top_pull_refresh_content">松开刷新</string>
    <string name="top_pull_go_home_content">松开回到首页</string>

    <!--权限-->
    <string name="common_request_permission">该操作需要开通权限</string>
    <string name="common_allow_permission">允许</string>
    <string name="snack_bar_exception_msg">请基于BaseActivity和BaseFragment来设计</string>

    <!--首页-->
    <string name="receipt">收款</string>
    <string name="bill">账单</string>
    <string name="ranking">排行榜</string>
    <string name="financing">理财</string>
    <string name="mine">我的</string>
    <string name="scan_qr_code">扫描二维码</string>

    <!--收款-->
    <string name="switch_mode">切换</string>
    <string name="pay_to_shop">能购扫一扫,向我付钱</string>
    <string name="month_income">月总收入:</string>
    <string name="today_income">今日总收入</string>
    <!--我的-->
    <string name="cash">现金</string>
    <string name="energy">能量</string>
    <string name="address_tel">地址/电话</string>
    <string name="evaluate">买家评价</string>
    <string name="rd_user">推荐用户</string>
    <string name="feedback">意见反馈</string>

    <!--登录-->
    <string name="login_password">密码登录</string>
    <string name="login_vcode">验证码登录</string>
    <string name="input_tel">请输入手机号</string>
    <string name="input_password">输入密码</string>
    <string name="input_vcode">输入验证码</string>
    <string name="send_vcode">发送验证码</string>
    <string name="login_in">登录</string>
    <string name="forget_password">忘记密码?</string>
    <string name="immediate_registration">立即注册</string>
    <string name="invalid_phone_input">请输入正确的手机号</string>
    <string name="empty_phone">请输入手机号</string>
    <string name="login_auth_code_sent">验证码已发送至您的手机,请注意查收</string>
    <string name="fg_password">忘记密码</string>
    <string name="set_password">设置密码</string>
    <string name="set_password_explain">请输入6-16位新密码</string>

    <!--账单-->
    <string name="account_detail">账单详情</string>
    <string name="screen">筛选</string>
    <string name="payment_method">付款方式</string>
    <string name="commodity_description">商品说明</string>
    <string name="other_account">对方账户</string>
    <string name="cash_store">收款店铺</string>
    <string name="created_at">创建时间</string>
    <string name="order_number">订单号</string>
    <string name="merchant_order_number">商户订单号</string>
    <string name="see_intercourse_record">查看来往记录</string>
    <string name="successful_trade">交易成功</string>
    <string name="choose_time">选择时间</string>
    <string name="history_income">历史收入</string>
    <string name="rd_income">推荐收益</string>
    <string name="total_income">总收入</string>
    <string name="income_number">收款笔数</string>
    <string name="total">合计</string>
    <string name="switch_shop">切换店铺</string>
    <string name="all_shop">全部店铺</string>
    <string name="query_all">全部查询</string>
    <string name="query_monthly">月度查询</string>
    <string name="query_stage">阶段查询</string>
    <string name="confirm">确定</string>
    <string name="now_month_income">本月总收入</string>
    <string name="service_charge">服务费</string>
    <string name="subsidy_energy_out">补贴能量支出</string>
    <string name="current_state">当前状态</string>
    <string name="putforward_type">类型</string>
    <string name="putforward_number">提现数量</string>
    <string name="apply_time">提现提现时间</string>
    <string name="reach_time">提现到账时间</string>
    <string name="putforward_bank">提现银行</string>
    <string name="putforward_orderno">提现单号</string>
    <string name="all">全部</string>

    <!--现金-->
    <string name="cash_detail">明细</string>
    <string name="account_balance">账户余额(元)</string>
    <string name="put_forward">提现</string>
    <string name="present_record">提现记录</string>

    <!--银行卡-->
    <string name="add_bank_card">添加银行卡</string>
    <string name="bind_card">请绑定持卡人本人的银行卡</string>
    <string name="next">下一步</string>
    <string name="confirm_putforward">确认提现</string>
    <string name="card_list">卡列表</string>
    <string name="card_tel">填写银行卡和身份信息</string>
    <string name="choice_bank">请选择银行卡类型</string>
    <string name="user_im">请填写个人信息</string>
    <string name="information_encryption">信息加密处理,仅用于银行验证</string>
    <string name="confirm_add">确认添加</string>

    <!--能量-->
    <string name="energy_explain">能量说明</string>
    <string name="coupon">优惠券</string>

    <!--设置-->
    <string name="setting">设置</string>
    <string name="shift_handset">换绑手机</string>
    <string name="business_im">商户信息</string>
    <string name="modify_password">修改密码</string>
    <string name="contact_us">联系我们</string>
    <string name="new_version_detection">新版本检测</string>
    <string name="login_out">退出当前账号</string>
    <string name="head_phone">头像</string>
    <string name="business_name">商户名称</string>
    <string name="service_type">服务类型</string>
    <string name="ut_date">承办日期</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="password_number_limit">至少使用字母,数字和符号两种及以上的组合，6～32个字符</string>
    <string name="input_phone_number">请输入手机号</string>
    <string name="button_send_auth_code">发送验证码</string>
    <string name="input_sms_verificationcode">请输入手机验证码</string>

    <!--排行榜-->
    <string name="year_ranking">年排行</string>
    <string name="season_ranking">季排行</string>
    <string name="month_ranking">月排行</string>
    <string name="consumption">消费</string>
    <string name="receivables">收款</string>
    <string name="energy_cost">能量消费</string>
    <string name="cash_cost">现金消费</string>
    <string name="send_out">发送</string>

    <!--理财-->
    <string name="project_list">项目列表</string>
    <string name="novice">新手专享</string>
    <string name="begin_to_join">开始加入</string>
    <string name="start_the_interest">开始计息</string>
    <string name="end_of_closed_period">封闭期结束</string>
    <string name="return_to_balance">本息返至余额</string>
    <string name="today_loan">今日出借</string>
    <string name="storage_mode">存管方式</string>
    <string name="target_interest_rate">目标利率( 年化 )</string>
    <string name="history_rate">历史年化收益率</string>
    <string name="project_total_price">项目总额</string>
    <string name="closed_period">封闭期</string>
    <string name="interest_type">计息方式</string>
    <string name="poundage">手续费</string>
    <string name="energy_financing">能量理财</string>
    <string name="cash_financing">现金理财</string>
    <string name="finaning_order">我的订单</string>
    <string name="go_investment">去投资</string>
    <string name="financing_wallet">理财钱包</string>
    <string name="energy_wallet">能量钱包</string>
    <string name="cash_wallet">现金钱包</string>
    <string name="accumulated_loan_repayment">累计出借回报</string>
    <string name="turn_out">转出</string>
    <string name="total_assets">资产总额</string>
    <string name="turn_out_balance">转出到余额</string>
    <string name="pay_order">支付订单</string>
    <string name="order_detail">订单详情</string>
    <string name="pay_success">支付成功</string>
    <string name="in_the_interest_rate">计息中</string>
    <string name="pay_type">支付方式</string>
    <string name="p_i_total">本息合计</string>
    <string name="turn_out_record">转出记录</string>
    <string name="pay_order_explain">提示:优先扣除钱包中的金额(能量/现金),当钱包中的金额(能量/现金)不
足时,再从余额中扣除剩下所需的金额(能量/现金).</string>
    <!--推荐人-->
    <string name="rd_list">推荐人列表</string>

    <!--支付密码-->
    <string name="pay_password">提现密码</string>
    <string name="setting_six_password">请设置6位数字提现密码</string>
    <string name="only_to_pay_energy">此密码用于仅使用提现时</string>
    <string name="pay_password_can_not_be_repeated">提现密码不能是重复、连续的数字</string>
    <string name="input_again">请再次输入确认</string>
    <string name="input_pw_to_authentication">输入提现密码,完成身份验证</string>
    <string name="remember">记得</string>
    <string name="do_not_remember">不记得</string>
    <string name="input_pay_password">请输入提现密码</string>
    <string name="confirm_setting">确认设置</string>
    <string name="modify_pay_pw">修改提现密码</string>
    <string name="send_sms_to_authentication">发送短信验证码到绑定的手机,完成身份验证</string>
</resources>
