<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="265dp"
        android:background="@mipmap/login_bg">

        <TextView
            android:id="@+id/login_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/common_twenty_eight_margin"
            android:layout_marginLeft="@dimen/common_twenty_nine_margin"
            android:text="@string/login_password"
            android:textColor="@color/appText1"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/login_vcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/common_twenty_eight_margin"
            android:layout_marginRight="@dimen/common_twenty_nine_margin"
            android:text="@string/login_vcode"
            android:textColor="@color/appText1"
            android:textSize="17sp" />
        <ImageView
            android:id="@+id/password_t_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/triangle_icon"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="@dimen/common_forty_eight_margin"/>
        <ImageView
            android:id="@+id/vcode_t_iv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/triangle_icon"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/common_forty_eight_margin"
            android:visibility="gone"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phone_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_forty_four_margin"
        android:layout_marginTop="@dimen/common_thirty_margin"
        android:background="@color/appText1">

        <EditText
            android:id="@+id/phone_number"
            style="@style/login_input_phone_style"
            android:drawableLeft="@mipmap/phone_icon"
            android:drawableStart="@mipmap/phone_icon"
            android:hint="@string/input_tel"
            android:inputType="phone"
            android:maxLength="11" />

        <View
            style="@style/persion_st_line"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/password_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_forty_four_margin"
        android:layout_marginTop="1dp"
        android:background="@color/appText1">

        <EditText
            android:id="@+id/password"
            style="@style/login_input_phone_style"
            android:drawableLeft="@mipmap/password_icon"
            android:drawableStart="@mipmap/password_icon"
            android:hint="@string/input_password" />

        <View
            style="@style/persion_st_line"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/vcode_rl"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_forty_four_margin"
        android:layout_marginTop="1dp"
        android:background="@color/appText1"
        android:visibility="gone">

        <EditText
            android:id="@+id/vcode"
            style="@style/login_input_phone_style"
            android:layout_toLeftOf="@id/send_vcode"
            android:drawableLeft="@mipmap/vcode_icon"
            android:drawableStart="@mipmap/vcode_icon"
            android:hint="@string/input_vcode" />

        <com.nenggou.slsm.common.widget.ColdDownButton
            android:id="@+id/send_vcode"
            android:layout_width="@dimen/common_eighty_margin"
            android:layout_height="@dimen/common_thirty_margin"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/common_thirty_margin"
            android:background="@color/appText1"
            android:gravity="center"
            android:text="@string/send_vcode"
            android:textColor="@color/appText3"
            android:textSize="13sp" />

        <View
            style="@style/persion_st_line"
            android:layout_alignParentBottom="true" />
    </RelativeLayout>

    <Button
        android:id="@+id/login_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/common_forty_eight_margin"
        android:layout_below="@+id/input_password_rel"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/common_thirty_margin"
        android:layout_marginRight="@dimen/common_thirty_margin"
        android:layout_marginTop="@dimen/common_twenty_five_margin"
        android:background="@drawable/login_button_bg"
        android:enabled="false"
        android:text="@string/login_in"
        android:textColor="@color/appText1"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/forget_password"
            style="@style/login_forget_number_style"
            android:layout_marginLeft="@dimen/common_thirty_margin"
            android:text="@string/forget_password" />

        <TextView
            android:id="@+id/register"
            style="@style/login_forget_number_style"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/common_thirty_margin"
            android:text="@string/immediate_registration" />
    </RelativeLayout>

</LinearLayout>