<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround1"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_rel"
        style="@style/title_rl_style">

        <ImageView
            android:id="@+id/back"
            style="@style/title_left_back_style" />

        <TextView
            android:id="@+id/title"
            style="@style/title_text_style"
            android:text="@string/modify_password" />
    </RelativeLayout>

    <com.nenggou.slsm.common.widget.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_twelve_margin"
                android:background="@color/appText1"
                android:orientation="vertical">

                <LinearLayout style="@style/modify_password_ll_style">

                    <TextView
                        style="@style/modify_password_style"
                        android:text="@string/old_password" />

                    <EditText
                        android:id="@+id/old_password_et"
                        style="@style/password_et_style"
                        android:layout_marginLeft="@dimen/common_thirty_two_margin"
                        android:inputType="textWebPassword"/>
                </LinearLayout>

                <View style="@style/persion_st_line" />

                <LinearLayout style="@style/modify_password_ll_style">

                    <TextView
                        style="@style/modify_password_style"
                        android:text="@string/new_password" />

                    <EditText
                        android:id="@+id/new_password_et"
                        style="@style/password_et_style"
                        android:layout_marginLeft="@dimen/common_thirty_two_margin"
                        android:inputType="textWebPassword"/>
                </LinearLayout>

                <View style="@style/persion_st_line" />

                <LinearLayout style="@style/modify_password_ll_style">

                    <TextView
                        style="@style/modify_password_style"
                        android:text="@string/confirm_password" />

                    <EditText
                        android:id="@+id/confirm_password_et"
                        style="@style/password_et_style"
                        android:layout_marginLeft="@dimen/common_seventeen_margin"
                        android:inputType="textWebPassword"/>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/common_twelve_margin"
                android:layout_marginTop="@dimen/common_twelve_margin"
                android:text="@string/password_number_limit"
                android:textColor="@color/appText6"
                android:textSize="12sp" />

            <Button
                android:id="@+id/confirm_bt"
                style="@style/next_bt_style"
                android:layout_marginTop="@dimen/common_thirty_eight_margin"
                android:enabled="true"
                android:text="@string/confirm" />
        </LinearLayout>
    </com.nenggou.slsm.common.widget.ReboundScrollView>
</LinearLayout>