<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/setting_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround1"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_rel"
        style="@style/title_rl_style">

        <ImageView
            android:id="@+id/back"
            style="@style/title_left_back_style" />

        <TextView
            android:id="@+id/title"
            style="@style/title_text_style"
            android:text="@string/setting" />
    </RelativeLayout>

    <com.nenggou.slsm.common.widget.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_twelve_margin"
                android:background="@color/appText1"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/item_business_im"
                    style="@style/persion_item_fl_style">

                    <TextView
                        style="@style/setting_item_text_style"
                        android:text="@string/business_im" />

                    <ImageView style="@style/go_arrow" />

                    <View
                        style="@style/st_line"
                        android:layout_alignParentBottom="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/item_shift_handset"
                    style="@style/persion_item_fl_style">

                    <TextView
                        style="@style/setting_item_text_style"
                        android:text="@string/shift_handset" />

                    <ImageView style="@style/go_arrow" />

                    <View
                        style="@style/st_line"
                        android:layout_alignParentBottom="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/item_modify_password"
                    style="@style/persion_item_fl_style">

                    <TextView
                        style="@style/setting_item_text_style"
                        android:text="@string/modify_password" />

                    <ImageView style="@style/go_arrow" />

                    <View
                        style="@style/st_line"
                        android:layout_alignParentBottom="true" />
                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_twelve_margin"
                android:background="@color/appText1"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/item_contact_us"
                    style="@style/persion_item_fl_style">

                    <TextView
                        style="@style/setting_item_text_style"
                        android:text="@string/contact_us" />

                    <ImageView style="@style/go_arrow" />

                    <View
                        style="@style/st_line"
                        android:layout_alignParentBottom="true" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/item_new_version_detection"
                    style="@style/persion_item_fl_style"
                    android:visibility="gone">

                    <TextView
                        style="@style/setting_item_text_style"
                        android:text="@string/new_version_detection" />

                    <ImageView style="@style/go_arrow" />

                    <View
                        style="@style/st_line"
                        android:layout_alignParentBottom="true" />
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/login_out"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_forty_four_margin"
                android:layout_marginTop="@dimen/common_twelve_margin"
                android:background="@color/appText1"
                android:text="@string/login_out"
                android:textColor="@color/appText3"
                android:textSize="15sp" />
        </LinearLayout>
    </com.nenggou.slsm.common.widget.ReboundScrollView>
</LinearLayout>