<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGround1"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/title_rel"
        style="@style/title_rl_style">

        <ImageView
            android:id="@+id/back"
            style="@style/title_left_back_style" />

        <TextView
            android:id="@+id/title"
            style="@style/title_text_style"
            android:text="@string/cash" />

        <TextView
            android:id="@+id/cash_detail"
            style="@style/title_text_right_style"
            android:text="@string/cash_detail" />
    </RelativeLayout>

    <com.nenggou.slsm.common.widget.ReboundScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fadingEdge="none"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_forty_two_margin"
                android:scaleType="centerCrop"
                android:src="@mipmap/gold_coin" />

            <TextView
                android:id="@+id/price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_seventeen_margin"
                android:textColor="@color/appText3"
                android:textSize="25sp"
                tools:text="25.00" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_twenty_three_margin"
                android:text="@string/account_balance"
                android:textColor="@color/appText5"
                android:textSize="17sp" />

            <Button
                android:id="@+id/put_forward_bt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/common_forty_four_margin"
                android:layout_marginLeft="@dimen/common_twelve_margin"
                android:layout_marginRight="@dimen/common_twelve_margin"
                android:layout_marginTop="@dimen/common_thirty_eight_margin"
                android:background="@drawable/put_forward_button_bg"
                android:text="@string/put_forward"
                android:textColor="@color/appText1"
                android:textSize="17sp" />
        </LinearLayout>
    </com.nenggou.slsm.common.widget.ReboundScrollView>
</LinearLayout>